Doc: Fix layout issue with expandable boxes

--- a/doc/assets/css/styles.css
+++ b/doc/assets/css/styles.css
@@ -1492,3 +1492,7 @@ input[type=text], select {
 .api-arguments td {
   padding: 5px;
 }
+.expandable-box-outline {
+  border: 1px solid black;
+  padding: 5px;
+}
